lkt/bootstrap/src/liblktlang.h


typedef struct
{
   uint64_t serial_number;
} *lkt_analysis_context;
typedef struct lkt_base_node__struct *lkt_base_node;
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *lkt_string_type;
typedef uint8_t lkt_bool;
typedef struct {
    uint32_t line;
    uint16_t column;
} lkt_source_location;
typedef struct {
    lkt_source_location start;
    lkt_source_location end;
} lkt_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} lkt_text;
typedef enum {
      LKT_AMP = 0
      ,
      LKT_AND_KW = 1
      ,
      LKT_AT = 2
      ,
      LKT_BIG_NUMBER = 3
      ,
      LKT_BIND_KW = 4
      ,
      LKT_BLOCK_STRING_LINE = 5
      ,
      LKT_CASE_KW = 6
      ,
      LKT_CHAR = 7
      ,
      LKT_CLASS_KW = 8
      ,
      LKT_COLON = 9
      ,
      LKT_COMB = 10
      ,
      LKT_COMMA = 11
      ,
      LKT_COMMENT = 12
      ,
      LKT_DISCARD_KW = 13
      ,
      LKT_DIV = 14
      ,
      LKT_DOC_COMMENT = 15
      ,
      LKT_DOT = 16
      ,
      LKT_DYN_VAR_KW = 17
      ,
      LKT_E_Q = 18
      ,
      LKT_ELIF_KW = 19
      ,
      LKT_ELLIPSIS = 20
      ,
      LKT_ELSE_KW = 21
      ,
      LKT_ENUM_KW = 22
      ,
      LKT_EQUAL = 23
      ,
      LKT_EXCL_MARK = 24
      ,
      LKT_FAT_RIGHT_ARROW = 25
      ,
      LKT_FUN_KW = 26
      ,
      LKT_G_T = 27
      ,
      LKT_G_T_E = 28
      ,
      LKT_GENERIC_KW = 29
      ,
      LKT_GRAMMAR_KW = 30
      ,
      LKT_IDENTIFIER = 31
      ,
      LKT_IF_KW = 32
      ,
      LKT_IMPLEMENTS_KW = 33
      ,
      LKT_IMPORT_KW = 34
      ,
      LKT_IN_KW = 35
      ,
      LKT_INT_MARK = 36
      ,
      LKT_IS_KW = 37
      ,
      LKT_L_BRACE = 38
      ,
      LKT_L_BRACK = 39
      ,
      LKT_L_PAR = 40
      ,
      LKT_L_T = 41
      ,
      LKT_L_T_E = 42
      ,
      LKT_LEFT_ARROW = 43
      ,
      LKT_LEXER_KW = 44
      ,
      LKT_LEXING_FAILURE = 45
      ,
      LKT_MATCH_KW = 46
      ,
      LKT_MINUS = 47
      ,
      LKT_N_E = 48
      ,
      LKT_NOT_KW = 49
      ,
      LKT_NULL_KW = 50
      ,
      LKT_NUMBER = 51
      ,
      LKT_OR_KW = 52
      ,
      LKT_P_STRING = 53
      ,
      LKT_PERCENT = 54
      ,
      LKT_PIPE = 55
      ,
      LKT_PLUS = 56
      ,
      LKT_PRIVATE_KW = 57
      ,
      LKT_PUBLIC_KW = 58
      ,
      LKT_R_BRACE = 59
      ,
      LKT_R_BRACK = 60
      ,
      LKT_R_PAR = 61
      ,
      LKT_RAISE_KW = 62
      ,
      LKT_RIGHT_ARROW = 63
      ,
      LKT_SEMICOLON = 64
      ,
      LKT_STRING = 65
      ,
      LKT_STRUCT_KW = 66
      ,
      LKT_TERMINATION = 67
      ,
      LKT_THEN_KW = 68
      ,
      LKT_TIMES = 69
      ,
      LKT_TRAIT_KW = 70
      ,
      LKT_TRY_KW = 71
      ,
      LKT_TWO_SIDED_ARROW = 72
      ,
      LKT_VAL_KW = 73
      ,
      LKT_WHEN_KW = 74
      ,
      LKT_WHITESPACE = 75
} lkt_token_kind;
typedef struct
{
   uint64_t version;
} *lkt_token_data_handler;
typedef struct {
    lkt_analysis_context context;
    lkt_token_data_handler token_data;
    int token_index, trivia_index;
} lkt_token;
typedef enum {
      EXCEPTION_FILE_READ_ERROR,
      EXCEPTION_BAD_TYPE_ERROR,
      EXCEPTION_OUT_OF_BOUNDS_ERROR,
      EXCEPTION_INVALID_INPUT,
      EXCEPTION_INVALID_SYMBOL_ERROR,
      EXCEPTION_INVALID_UNIT_NAME_ERROR,
      EXCEPTION_NATIVE_EXCEPTION,
      EXCEPTION_PRECONDITION_FAILURE,
      EXCEPTION_PROPERTY_ERROR,
      EXCEPTION_TEMPLATE_ARGS_ERROR,
      EXCEPTION_TEMPLATE_FORMAT_ERROR,
      EXCEPTION_TEMPLATE_INSTANTIATION_ERROR,
      EXCEPTION_STALE_REFERENCE_ERROR,
      EXCEPTION_SYNTAX_ERROR,
      EXCEPTION_UNKNOWN_CHARSET,
      EXCEPTION_MALFORMED_TREE_ERROR,
} lkt_exception_kind;
typedef void *lkt_stack_trace;
typedef struct {
   lkt_exception_kind kind;
   const char *information;
   lkt_stack_trace stack_trace;
} lkt_exception;
typedef struct lkt_node_array_record *lkt_node_array;
typedef struct lkt_internal_logic_context_array_record *lkt_internal_logic_context_array;
typedef struct lkt_internal_solver_diagnostic_array_record *lkt_internal_solver_diagnostic_array;
    typedef struct {
            uint32_t value;
            lkt_bool has_error;
            lkt_source_location error_sloc;
            lkt_string_type error_message;
    } lkt_internal_decoded_char_value;
    extern void
    lkt_internal_decoded_char_value_inc_ref(lkt_internal_decoded_char_value *r);
    extern void
    lkt_internal_decoded_char_value_dec_ref(lkt_internal_decoded_char_value *r);
    typedef struct {
            lkt_string_type value;
            lkt_bool has_error;
            lkt_source_location error_sloc;
            lkt_string_type error_message;
    } lkt_internal_decoded_string_value;
    extern void
    lkt_internal_decoded_string_value_inc_ref(lkt_internal_decoded_string_value *r);
    extern void
    lkt_internal_decoded_string_value_dec_ref(lkt_internal_decoded_string_value *r);
    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
    typedef struct {
            lkt_node ref_node;
            lkt_node decl_node;
    } lkt_internal_logic_context;
    typedef struct {
            lkt_string_type message_template;
            lkt_node_array args;
            lkt_base_node location;
            lkt_internal_logic_context_array contexts;
            int round;
    } lkt_internal_solver_diagnostic;
    extern void
    lkt_internal_solver_diagnostic_inc_ref(lkt_internal_solver_diagnostic *r);
    extern void
    lkt_internal_solver_diagnostic_dec_ref(lkt_internal_solver_diagnostic *r);
    typedef struct {
            lkt_bool success;
            lkt_internal_solver_diagnostic_array diagnostics;
    } lkt_internal_solver_result;
    extern void
    lkt_internal_solver_result_inc_ref(lkt_internal_solver_result *r);
    extern void
    lkt_internal_solver_result_dec_ref(lkt_internal_solver_result *r);
struct lkt_node_array_record {
   int n;
   int ref_count;
   lkt_node items[1];
};
extern lkt_node_array
lkt_node_array_create(int length);
extern void
lkt_node_array_inc_ref(lkt_node_array a);
extern void
lkt_node_array_dec_ref(lkt_node_array a);
struct lkt_internal_logic_context_array_record {
   int n;
   int ref_count;
   lkt_internal_logic_context items[1];
};
extern lkt_internal_logic_context_array
lkt_internal_logic_context_array_create(int length);
extern void
lkt_internal_logic_context_array_inc_ref(lkt_internal_logic_context_array a);
extern void
lkt_internal_logic_context_array_dec_ref(lkt_internal_logic_context_array a);
struct lkt_internal_solver_diagnostic_array_record {
   int n;
   int ref_count;
   lkt_internal_solver_diagnostic items[1];
};
extern lkt_internal_solver_diagnostic_array
lkt_internal_solver_diagnostic_array_create(int length);
extern void
lkt_internal_solver_diagnostic_array_inc_ref(lkt_internal_solver_diagnostic_array a);
extern void
lkt_internal_solver_diagnostic_array_dec_ref(lkt_internal_solver_diagnostic_array a);
extern int lkt_lkt_node_parent(
    lkt_node *node,
    lkt_node *value_p
);
extern int lkt_lkt_node_parents(
    lkt_node *node,
        lkt_bool
        with_self,
    lkt_node_array *value_p
);
extern int lkt_lkt_node_children(
    lkt_node *node,
    lkt_node_array *value_p
);
extern int lkt_lkt_node_token_start(
    lkt_node *node,
    lkt_token *value_p
);
extern int
lkt_stack_trace_size(lkt_stack_trace trace);
extern void *
lkt_stack_trace_element(lkt_stack_trace trace, int index);
extern lkt_stack_trace
lkt_create_stack_trace(int size, void **elements);
extern void
lkt_destroy_stack_trace(lkt_stack_trace trace);
extern char *
lkt_symbolize_stack_trace(lkt_stack_trace trace);
extern const lkt_exception *
lkt_get_last_exception(void);
extern char *
lkt_exception_name(lkt_exception_kind kind);
extern int
lkt_token_get_kind(lkt_token *token);
extern char *
lkt_token_kind_name(lkt_token_kind kind);
extern void
lkt_token_sloc_range(lkt_token *token,
                                     lkt_source_location_range *result);
extern void
lkt_token_next(lkt_token *token,
                               lkt_token *next_token);
extern void
lkt_token_previous(lkt_token *token,
                                   lkt_token *previous_token);
extern int
lkt_token_range_text(lkt_token *first,
                                     lkt_token *last,
                                     lkt_text *result);
extern lkt_bool
lkt_token_is_equivalent(lkt_token *left,
                                        lkt_token *right);