lkt/bootstrap/src/liblktlang-implementation-c.ads


procedure lkt_internal_decoded_char_value_inc_ref (R : lkt_internal_decoded_char_value_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_decoded_char_value_inc_ref";
procedure lkt_internal_decoded_char_value_dec_ref (R : lkt_internal_decoded_char_value_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_decoded_char_value_dec_ref";


         



subtype lkt_internal_decoded_string_value is Internal_Decoded_String_Value;
type lkt_internal_decoded_string_value_Ptr is access Internal_Decoded_String_Value;

procedure lkt_internal_decoded_string_value_inc_ref (R : lkt_internal_decoded_string_value_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_decoded_string_value_inc_ref";
procedure lkt_internal_decoded_string_value_dec_ref (R : lkt_internal_decoded_string_value_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_decoded_string_value_dec_ref";


         



subtype lkt_internal_logic_context is Internal_Logic_Context;
type lkt_internal_logic_context_Ptr is access Internal_Logic_Context;



         



subtype lkt_internal_solver_diagnostic is Internal_Solver_Diagnostic;
type lkt_internal_solver_diagnostic_Ptr is access Internal_Solver_Diagnostic;

procedure lkt_internal_solver_diagnostic_inc_ref (R : lkt_internal_solver_diagnostic_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_diagnostic_inc_ref";
procedure lkt_internal_solver_diagnostic_dec_ref (R : lkt_internal_solver_diagnostic_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_diagnostic_dec_ref";


         



subtype lkt_internal_solver_result is Internal_Solver_Result;
type lkt_internal_solver_result_Ptr is access Internal_Solver_Result;

procedure lkt_internal_solver_result_inc_ref (R : lkt_internal_solver_result_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_result_inc_ref";
procedure lkt_internal_solver_result_dec_ref (R : lkt_internal_solver_result_Ptr)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_result_dec_ref";



   -----------------
   -- Array types --
   -----------------

         



subtype lkt_node_array is Internal_Entity_Array_Access;
type lkt_node_array_Ptr is access Internal_Entity_Array_Access;

function lkt_node_array_create (Length : int) return Internal_Entity_Array_Access
   with Export        => True,
        Convention    => C,
        External_name => "lkt_node_array_create";

procedure lkt_node_array_inc_ref (A : Internal_Entity_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_node_array_inc_ref";

procedure lkt_node_array_dec_ref (A : Internal_Entity_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_node_array_dec_ref";


         



subtype lkt_internal_logic_context_array is Internal_Logic_Context_Array_Access;
type lkt_internal_logic_context_array_Ptr is access Internal_Logic_Context_Array_Access;

function lkt_internal_logic_context_array_create (Length : int) return Internal_Logic_Context_Array_Access
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_logic_context_array_create";

procedure lkt_internal_logic_context_array_inc_ref (A : Internal_Logic_Context_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_logic_context_array_inc_ref";

procedure lkt_internal_logic_context_array_dec_ref (A : Internal_Logic_Context_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_logic_context_array_dec_ref";


         



subtype lkt_internal_solver_diagnostic_array is Internal_Solver_Diagnostic_Array_Access;
type lkt_internal_solver_diagnostic_array_Ptr is access Internal_Solver_Diagnostic_Array_Access;

function lkt_internal_solver_diagnostic_array_create (Length : int) return Internal_Solver_Diagnostic_Array_Access
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_diagnostic_array_create";

procedure lkt_internal_solver_diagnostic_array_inc_ref (A : Internal_Solver_Diagnostic_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_diagnostic_array_inc_ref";

procedure lkt_internal_solver_diagnostic_array_dec_ref (A : Internal_Solver_Diagnostic_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "lkt_internal_solver_diagnostic_array_dec_ref";



   --------------------
   -- Iterator types --
   --------------------


   ------------------
   -- Stack traces --
   ------------------

   function lkt_stack_trace_size
     (Stack_Trace : lkt_stack_trace) return int
      with Export, Convention => C;
   --  Return the number of entries in the given stack trace.

   function lkt_stack_trace_element
     (Stack_Trace : lkt_stack_trace; Index : int) return System.Address
      with Export, Convention => C;
   --  Return the stack trace item at the given index. The given index must be
   --  non-negative and lower than the stack trace size.

   function lkt_create_stack_trace
     (Size : int; Elements : System.Address) return lkt_stack_trace
      with Export, Convention => C;
   --  Allocate and return a stack trace for the given entries.
   --
   --  The result must be deallocated with the ``destroy_stack_trace`` function
   --  when done with it.

   procedure lkt_destroy_stack_trace
     (Stack_Trace : lkt_stack_trace) with Export, Convention => C;
   --  Deallocate a stack trace that was created with ``create_stack_trace``.

   function lkt_symbolize_stack_trace
     (Stack_Trace : lkt_stack_trace) return chars_ptr
      with Export, Convention => C;
   --  Convert a stack trace to a multi-line human readable trace.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.

   ----------
   -- Misc --
   ----------

   function lkt_get_last_exception return lkt_exception_Ptr
     with Export        => True,
          Convention    => C,
          External_Name => "lkt_get_last_exception";
   --  Return exception information for the last error that happened in the
   --  current thread. Will be automatically allocated on error and free'd on
   --  the next error.

   function lkt_exception_name
     (Kind : lkt_exception_kind) return chars_ptr
      with Export, Convention => C;
   --  Return the name of the given exception kind. Callers are responsible for
   --  free'ing the result.

   procedure Clear_Last_Exception;
   --  Free the information contained in Last_Exception

   procedure Set_Last_Exception (Exc : Exception_Occurrence);
   --  Free the information contained in Last_Exception and replace it with
   --  newly allocated information from Exc.

   procedure Set_Last_Exception
     (Id          : Exception_Id;
      Message     : String;
      Stack_Trace : GNAT.Traceback.Tracebacks_Array);
   --  Likewise, but using exception information as independent components.
   --  This is useful to pass messages that are longer than what the Ada
   --  runtime accepts (i.e. allows to avoid truncated error messages).

   function lkt_token_get_kind
     (Token : lkt_token) return int
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_token_get_kind";
   --  Kind for this token.

   function lkt_token_kind_name (Kind : int) return chars_ptr
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_token_kind_name";
   --  Return a human-readable name for a token kind.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.
   --
   --  If the given kind is invalid, return ``NULL`` and set the last exception
   --  accordingly.

   procedure lkt_token_sloc_range
     (Token : lkt_token; Result : access lkt_source_location_range)
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_token_sloc_range";
   --  Return the source location range of the given token.

   procedure lkt_token_next
     (Token      : lkt_token;
      Next_Token : access lkt_token)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_token_next";
   --  Return a reference to the next token in the corresponding analysis unit.

   procedure lkt_token_previous
     (Token          : lkt_token;
      Previous_Token : access lkt_token)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_token_previous";
   --  Return a reference to the previous token in the corresponding analysis
   --  unit.

   function lkt_token_range_text
     (First, Last : lkt_token;
      Text        : access lkt_text) return int
      with Export => True,
           Convention => C,
           External_Name => "lkt_token_range_text";
   --  Compute the source buffer slice corresponding to the text that spans
   --  between the ``First`` and ``Last`` tokens (both included). This yields
   --  an empty slice if ``Last`` actually appears before ``First``. Put the
   --  result in ``RESULT``.
   --
   --  This returns ``0`` if ``First`` and ``Last`` don't belong to the same
   --  analysis unit. Return ``1`` if successful.

   function lkt_token_is_equivalent
     (Left  : lkt_token;
      Right : lkt_token) return lkt_bool
      with Export        => True,
           Convention    => C,
           External_name => "lkt_token_is_equivalent";
   --  Return whether ``L`` and ``R`` are structurally equivalent tokens. This
   --  means that their position in the stream won't be taken into account,
   --  only the kind and text of the token.

   ---------------------------------------
   -- Kind-specific AST node primitives --
   ---------------------------------------

   --  All these primitives return their result through an OUT parameter. They
   --  return a boolean telling whether the operation was successful (it can
   --  fail if the node does not have the proper type, for instance). When an
   --  AST node is returned, its ref-count is left as-is.

           
   

   
   

   function lkt_lkt_node_parent
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_parent";
   --  Return the syntactic parent for this node. Return null for the root
   --  node.

           
   

   
   

   function lkt_lkt_node_parents
     (Node : lkt_node_Ptr;

         With_Self :
            
            lkt_bool;

      Value_P : access lkt_node_array) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_parents";
   --  Return an array that contains the lexical parents, this node included
   --  iff ``with_self`` is True. Nearer parents are first in the list.

           
   

   
   

   function lkt_lkt_node_children
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node_array) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_children";
   --  Return an array that contains the direct lexical children.
   --
   --  .. warning:: This constructs a whole array every-time you call it, and
   --     as such is less efficient than calling the ``Child`` built-in.

           
   

   
   

   function lkt_lkt_node_token_start
     (Node : lkt_node_Ptr;


      Value_P : access lkt_token) return int
